--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,12 @@
-/* место для вашего кода */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__logo-image/header__logo-image.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__links-list/header__links-list.css);
+@import url(../blocks/header/__links-list-item/header__links-list-item.css);
+@import url(../blocks/header/__links-list-item/_no-bullit/header__links-list-item_no-bullit.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__link/_active/header__link_active.css);
+@import url(../blocks/address/address.css);
+@import url(../blocks/header/__address/header__address.css);
+
