--- a/styles/style.css
+++ b/styles/style.css
@@ -10,3 +10,50 @@
 @import url(../blocks/address/address.css);
 @import url(../blocks/header/__address/header__address.css);
 
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__description/cover__description.css);
+@import url(../blocks/cover/__description-text/cover__description-text.css);
+
+/* доп. стили секции cover */
+
+.aligned-text {
+    text-align: left;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+.letter-spacing-extended-30px {
+    letter-spacing: 30px;
+}
+
+.letter-spacing-extended-60px {
+    letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.bet-button {
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: 12px 32px 11px 31px;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 22px;
+    color: #fff;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, .6);
+    z-index: 2;
+}
