--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,19 @@
 @import url(../blocks/cover/__description/cover__description.css);
 @import url(../blocks/cover/__description-text/cover__description-text.css);
 
+@import url(../blocks/lots/lots.css);
+@import url(../blocks/lots/__heading/lots__heading.css);
+@import url(../blocks/lots/__look-more-link/lots__look-more-link.css);
+@import url(../blocks/lots/__card-list/lots__card-list.css);
+@import url(../blocks/lots/__card-list-item/lots__card-list-item.css);
+
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/_type/card_type_book.css);
+@import url(../blocks/card/_type/card_type_film.css);
+@import url(../blocks/card/_type/card_type_picture.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__text/card__text.css);
+
 /* доп. стили секции cover */
 
 .aligned-text {
@@ -49,6 +62,7 @@
     text-transform: uppercase;
     font-size: 22px;
     color: #fff;
+    cursor: pointer;
 }
 
 .overlay {
@@ -56,4 +70,12 @@
     inset: 0;
     background-color: rgba(0, 0, 0, .6);
     z-index: 2;
+}
+
+/* доп. стили для секции lots */
+
+.card-link {
+    display: block;
+    text-decoration: none;
+    height: 100%;
 }
