--- a/blocks/about/__text/about__text.css
+++ b/blocks/about/__text/about__text.css
@@ -1,7 +1,7 @@
 .about__text {
     font-size: 20px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 1.2;
 }
 
 .about__text:first-of-type {
