--- a/blocks/cover/__description/cover__description.css
+++ b/blocks/cover/__description/cover__description.css
@@ -1,12 +1,9 @@
 .cover__description {
+    padding-left: 33px;
     color: #fff;
     text-transform: uppercase;
     font-size: 22px;
-    position: absolute;
-    top: 655px;
-    left: 82px;
-    bottom: 51px;
-    right: 50px;
+    position: relative;
     z-index: 3;
     display: flex;
     justify-content: space-between;
